* [Bug 889] avoid malloc() interrupted by SIGIO risk
* ntpd/refclock_parse.c: cleanup shutdown while the file descriptor is still open.
* [Bug 885] use emalloc() to get a message at the end of the memory
            unsigned types cannot be less than 0
            default_ai_family is a short
            lose trailing , from enum list
* [Bug 884] don't access recv buffers after having them passed to the free list.
* [Bug 882] allow loopback interfaces to share addresses with other interfaces.

---
(4.2.4p3) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 863] unable to stop ntpd on Windows as the handle reference for events
	    changed

---
(4.2.4p2) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 854] Broadcast address was not correctly set for interface addresses
* [Bug 829] reduce syslog noise, while there fix Enabled/Disable logging
	    to reflect the actual configuration.
* [Bug 795] Moved declaration of variable to top of function.
* [Bug 789] Fix multicast client crypto authentication and make sure arriving
	    multicast packets do not disturb the autokey dance.
* [Bug 785] improve handling of multicast interfaces
	    (multicast routers still need to run a multicast routing
	    software/daemon)
* [Bug 527] Don't write from source address length to wrong location
* Upgraded autogen and libopts.
* [Bug 811] ntpd should not read a .ntprc file.

---
(4.2.4p1) (skipped)

---
(4.2.4p0) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 793] Update Hans Lambermont's email address in ntpsweep.
* [Bug 776] Remove unimplemented "rate" flag from ntpdate.
* [Bug 586] Avoid lookups if AI_NUMERICHOST is set.
* [Bug 770] Fix numeric parameters to ntp-keygen (Alain Guibert).
* [Bug 768] Fix io_setbclient() error message.
* [Bug 765] Use net_bind_service capability on linux.
* [Bug 760] The background resolver must be aware of the 'dynamic' keyword.
* [Bug 753] make union timestamp anonymous (Philip Prindeville).