@@ -4,6 +4,7 @@
             unsigned types cannot be less than 0
             default_ai_family is a short
             lose trailing , from enum list
+	    clarify ntp_restrict.c for easier automated analysis
 * [Bug 884] don't access recv buffers after having them passed to the free list.
 * [Bug 882] allow loopback interfaces to share addresses with other interfaces.
 
